# TianGong-AI-Unstructure-Serve

./: .env.example  .gitignore  AGENTS.md  README.md  ecosystem.celery.flower.json  ecosystem.celery.json  ecosystem.config.js  ecosystem.config.json  ecosystem.config.single.js  ecosystem.quatro.json  ecosystem.triple.json  ecosystem.two_stage.celery.json  ecosystem.two_stage.flower.json  ecosystem.vllm.config.json  ecosystem.vllm.parallele.config.json  ecosystem.vllm.quatro.json  mineru_3_docx_native_evaluation.md  mineru_with_images_task_usage.md  modification_summary.md  multi_gpu_vllm_scaling_todolist.md  pyproject.toml  requirements.txt  requirements_backup.txt  requirements_freeze.txt  test.http  two_stage_task_usage.md
.secrets/: secrets.dev.toml
src/: __init__.py  main.py
src/config/: config.py
src/models/: models.py
src/routers/: docx_router.py  (+15 more)
tests/: conftest.py  test_celery.py  test_config.py  test_file_conversion.py  test_gpu_router.py  test_gpu_scheduler_process_lifecycle.py  test_health_router.py  test_markdown_parser.py  test_mineru_backend.py  test_mineru_minio_utils.py  test_mineru_reading_order.py  test_mineru_support.py  test_mineru_with_images_router.py  test_mineru_with_images_service.py  test_mineru_with_images_task_router.py  test_minio_router_helpers.py  test_minio_storage.py  test_models.py  test_pdf_text_layer_reconcile.py  test_response_utils.py  test_two_stage_pipeline_parse.py  test_two_stage_router.py  test_vision_service.py  test_vision_service_openai_compatible.py  test_weaviate_router.py
weaviate/: docker-compose.yml
(+36 files in other folders)
